# movie-store

./: .env.example  .gitignore  CLERK_INTEGRATION.md  DOCKER_ENV_SETUP.md  Dockerfile  README.md  SETUP.md  UV_MIGRATION.md  docker-compose.yml  moviestore.py  requirements.txt
app/: __init__.py  app.db  config.py
app/api/: __init__.py  auth.py  categories.py  errors.py  home.py  movies.py  orders.py  pay.py  rent.py  users.py  utils.py
app/model/: categories.py  movies.py  orders.py  table_associations.py  users.py
app/tests/: test_users_endpoint.py
backend/: Dockerfile  moviestore.py  pyproject.toml  start.sh
backend/app/: __init__.py  config.py
backend/app/api/: errors.py  orders.py  pay.py  users.py
backend/app/model/: categories.py  movies.py  table_associations.py
backend/migrations/versions/: 725c171c8d4e_.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts
