[project]
name = "movie-store"
version = "1.0.0"
description = "A RESTful movie rental application"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-HTTPAuth==4.4.0",
    "SQLAlchemy==2.0.23",
    "alembic==1.12.1",
    "python-dateutil==2.8.2",
    "requests==2.31.0",
    "click==8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black==23.12.0",
    "pytest==7.4.3",
    "Flask-Testing==0.8.1",
]

